[gd_scene load_steps=3 format=3 uid="uid://dw2y071evqab3"]

[ext_resource type="Script" uid="uid://c63vakmxgpgkj" path="res://UI/HUD.gd" id="1_hud"]

[sub_resource type="SystemFont" id="1_font"]
subpixel_positioning = 0

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_hud")

[node name="Margin" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBox" type="VBoxContainer" parent="Margin"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="HBoxHealth" type="HBoxContainer" parent="Margin/VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="Margin/VBox/HBoxHealth"]
layout_mode = 2
theme_override_fonts/font = SubResource("1_font")
text = "Health"

[node name="HealthBar" type="ProgressBar" parent="Margin/VBox/HBoxHealth"]
custom_minimum_size = Vector2(300, 18)
layout_mode = 2
value = 100.0
show_percentage = false

[node name="HBoxMana" type="HBoxContainer" parent="Margin/VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="Margin/VBox/HBoxMana"]
layout_mode = 2
theme_override_fonts/font = SubResource("1_font")
text = "Mana"

[node name="ManaBar" type="ProgressBar" parent="Margin/VBox/HBoxMana"]
custom_minimum_size = Vector2(300, 18)
layout_mode = 2
value = 50.0
show_percentage = false

[node name="HBoxSpirit" type="HBoxContainer" parent="Margin/VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="Margin/VBox/HBoxSpirit"]
layout_mode = 2
theme_override_fonts/font = SubResource("1_font")
text = "Spirit"

[node name="SpiritBar" type="ProgressBar" parent="Margin/VBox/HBoxSpirit"]
custom_minimum_size = Vector2(300, 18)
layout_mode = 2
max_value = 10.0
show_percentage = false
